--- a/google_clone.css
+++ b/google_clone.css
@@ -1,5 +1,4 @@
-h5{
-	float: right;
+body {
 	font-family: arial,sans-serif;
 }
 div.topmenu{
@@ -44,8 +43,8 @@ header{
 	width: 24%;
 	position: absolute;  
     top: 0;  
-    bottom: 155px;  
-    left: 0;  
+    bottom: 170px;  
+    left: 20px;  
     right: 0;  
     margin: auto;
 }
@@ -57,22 +56,119 @@ header{
 	border: 1px ;
 	border-color: lightgrey;
 	border-style: solid;
-	width: 550px;
+	width: 590px;
 	height: 38px;
 	position: absolute;  
-    top: 40px;  
+    top: 20px;  
     bottom: 0;  
-    left: 0;  
+    left: 10px;  
     right: 0;  
     margin: auto;
 }
 
-#microphone{
-	float: right;
+#searchbox:hover{
+    border: 1px solid #b9b9b9;
 }
+
 #whitespace{
 	width: 15px;
 	background-color: white;
 	float: right;
 	color: white;
+}
+
+.button {
+	height: 36px;
+    line-height: 27px;
+    text-align: center;
+    background-color: #f2f2f2;
+    color: #757575;
+    font-weight: bold;
+    font-family: arial,sans-serif;
+    font-size: 13px;
+    padding: 0px 16px 0px 16px;
+    border: 1px solid #f2f2f2;
+    border-radius: 2px;
+    line-height: 37px;
+}
+.button:hover {
+	border: 1px solid #c6c6c6;
+	box-shadow: 0 1px 1px rgba(0,0,0,0.1);
+    color: #222;
+    background-color: #f8f8f8;
+}
+
+
+#googlesearch {
+	width: 100px;
+	position: absolute;  
+    top: 160px;  
+    bottom: 0;  
+    left: 0;  
+    right: 170px;  
+    margin: auto;
+    z-index: -2;
+}
+
+#imfeelinglucky {
+	width: 120px;
+	position: absolute;  
+    top: 160px;  
+    bottom: 0;  
+    left: 140px;  
+    right: 0;  
+    margin: auto;
+}
+footer {
+	line-height: 40px;
+	color: #666;
+	background: #f2f2f2;
+    border-top: 1px solid #e4e4e4;
+	width:100%;
+	height:42px;
+	position: absolute;  
+    bottom: 0;  
+    left: 0;  
+    right: 0;  
+    font-size: small;
+}
+.botmenuleft{
+	float: left;
+	padding: 0px 0px 0px 27px;
+}
+.botmenuright{
+	float: right;
+	padding: 0px 0px 0px 27px;
+}
+.botmenuright:hover {
+	text-decoration: underline;
+}
+.botmenuleft:hover {
+	text-decoration: underline;
+}
+#spanbotmenuright{
+	float: right;
+	margin: 0px 27px 0px 0px;
+}
+input {
+	width: 80%;
+	height: 100% !important;
+    position: absolute;
+    z-index: 6;
+    left: 0px;
+    border: 0px solid;
+	font-size: small;
+	color: #222;
+	font: 16px arial,sans-serif;
+    line-height: 26px !important;
+    padding: 0px 0px 0px 6px;
+    z-index: 1;
+}
+input:focus {
+	outline: none;
+}
+
+#microphone{
+	float: right;
+	z-index: 3;
 }
